@@ -1,4 +1,5 @@
-README.txt
-lib
-GPL.txt
+README
 LICENSE.txt
+GPL.txt
+doc
+lib
